force-app/main/default/objects/CJFW_NotificationTarget__c/fields/GroupId__c.field-meta.xml
<CustomField>
    <fullName>GroupId__c</fullName>
    <description>협업그룹Id (CollaborationGroupId)</description>
    <label>GroupId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>