force-app/main/default/objects/CJFW_NotificationTarget__c/fields/Notification__c.field-meta.xml
<CustomField>
    <fullName>Notification__c</fullName>
    <description>알림 관리</description>
    <label>Notification</label>
    <referenceTo>CJFW_Notification__c</referenceTo>
    <relationshipLabel>Notification Target</relationshipLabel>
    <relationshipName>Notification_Target</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>