force-app/main/default/objects/CJFW_NotificationTarget__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>사용자</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notification_Target</relationshipName>
    <type>Lookup</type>
</CustomField>